# orderprocessor

./: ARCHITECTURE.md  README.md  docker-compose.yml
order-service/: .env.example  Dockerfile  README.md  pyproject.toml
order-service/alembic/: env.py
order-service/app/: main.py
order-service/app/api/: health.py  orders.py
order-service/app/core/: broker.py  config.py
order-service/app/models/: order.py
order-service/app/repositories/: __init__.py  order.py
order-service/app/schemas/: order.py
order-service/app/services/: consumer.py  order.py
order_service/: .env.example  Dockerfile  mypy.ini  pyproject.toml
order_service/alembic/versions/: 002_add_outbox_table.py
order_service/app/: main.py
order_service/app/api/: orders.py
order_service/app/core/: config.py
order_service/app/models/: order.py  outbox.py
order_service/app/repositories/: outbox.py
order_service/app/schemas/: __init__.py
order_service/app/services/: __init__.py  consumer.py  order.py  outbox_processor.py
order_service/tests/: conftest.py  test_orders.py  test_outbox.py
processor-service/: .env.example  Dockerfile  README.md  pyproject.toml
processor-service/alembic/: env.py
processor-service/app/api/: health.py
processor-service/app/core/: config.py  database.py
processor-service/app/models/: processing.py
processor-service/tests/: test_processor.py
processor_service/: .dockerignore  .gitignore  pyproject.toml
processor_service/alembic/: env.py
processor_service/app/: main.py
processor_service/tests/: conftest.py  test_processor.py
(+12 files in other folders)
